2007-01-25 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Bug fix in plugins.make.caller: ambiguous provide objects
	  generated.
	* Release 2.0.0pre21

2007-01-22 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* fix "[ 1639330 ] 'CALL_MAKE_AND_RESCAN' is not defined", plus
	  associated test.
	* Release 2.0.0pre20
	
2007-01-17 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* fix "[ 1620287 ] Cycle error: message output bug"

2007-01-17 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Add tests (inmem and build) for explicit executable names
	* setup.py: try to put all modules into the distribution packages
	  (maybe someone will invent recursive_packages one day)
	* Release 2.0.0pre19

2007-01-07 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* Eliminate the bogus DirectoryBuilder.configurator
	  story. Builder.initialize() is now responsible for executing the
	  user's interface calls. Configuration of the directory is now
	  done by the package's LocalPackage.initial_builders() return
	  value.
	  
2007-01-04 Joerg Faschingbauer <joerg.faschingbauer@aon.at>

	* libconfix.plugins.c.library_dependencies: generate library
	  dependencies for executables that are not linked by libtool
	  (<exename>_DEPENDENCIES).
	* Internal changes
	  * Replace the odd BuilderSet with an ordinary standard Python
	    set.
	  * Builders IDs do not anymore have to be globally (well, inside
	    the package) unique, but only within a directory. Renamed
	    Builder.unique_id() to Builder.locally_unique_id(),
	    therefore. Require an implementation to implement it, though,
	    to make people aware.
	  * libconfix.plugins.c.base: evaluate the C comment interface
	    calls (you know, "// CONFIX:BLAH()" stuff) in
	    Builder.configure(), rather than in the ctor.
	  * libconfix.plugins.c.clusterer: support for C files that get
	    their "MAIN" property *after* the clusterer has seen them the
	    first time.
	  * lots of new tests.
	* Release 2.0.0pre18
