@@ -1,3 +1,8 @@
+2007-02-07 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
+
+	* Bug fix: "[ 1654643 ] URGENCY_ERROR require need not be resolved
+	  immediately"
+
 2007-01-25 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
 
 	* Bug fix in plugins.make.caller: ambiguous provide objects
